--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
         </div>
       </section>
     </main>
+
     <!-- ============== FOOTER =============== -->
     <footer class="footer-block">
       <div class="container container-footer">
@@ -483,7 +484,107 @@
             </li>
           </ul>
         </div>
+        <div class="wrap-subscribe">
+          <p class="label-subscribe">Subscribe</p>
+          <form class="form-subscribe">
+            <input
+              class="input-subscribe"
+              type="email"
+              name="subscribe"
+              placeholder="E-mail"
+            />
+            <!-- <div class="subscribe-wrap-icon"> -->
+            <button class="btn-subscribe" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+            <!-- </div> -->
+          </form>
+        </div>
       </div>
     </footer>
+    <!-- ================== Modal overlay ================ -->
+    <div class="modal-overlay">
+      <div class="modal modal-wrap">
+        <div class="modal-close-icon">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </div>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="form-area">
+          <div class="modal-block-wrap">
+            <label class="form-label-contacts" for="user-name">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                class="form-input-contacts"
+                type="text"
+                name="name"
+                id="user-name"
+              />
+              <svg class="modal-input-icon" wight="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-block-wrap">
+            <label class="form-label-contacts" for="user-phone">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                class="form-input-contacts"
+                type="phone"
+                name="phone"
+                id="user-phone"
+              />
+              <svg class="modal-input-icon" wight="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-block-wrap">
+            <label class="form-label-contacts" for="user-email">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                class="form-input-contacts"
+                type="email"
+                name="email"
+                id="user-email"
+              />
+              <svg class="modal-input-icon" wight="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-block-wrap">
+            <label class="form-label-contacts" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="form-textatea-input"
+              name="comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-checkbox-wrap">
+            <input class="visually-hidden" type="checkbox" id="user-privacy" />
+            <label class="form-label-privacy" for="user-privacy"
+              ><span class="form-checkbox">
+                <svg class="icon-check" width="16" height="16">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-btn-send" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
