--- a/index.html
+++ b/index.html
@@ -485,22 +485,22 @@
           </ul>
         </div>
         <div class="wrap-subscribe">
-          <p class="label-subscribe">Subscribe</p>
+          <p class="text-subscribe">Subscribe</p>
           <form class="form-subscribe">
-            <input
-              class="input-subscribe"
-              type="email"
-              name="subscribe"
-              placeholder="E-mail"
-            />
-            <!-- <div class="subscribe-wrap-icon"> -->
+            <label class="label-subscribe">
+              <input
+                class="input-subscribe"
+                type="email"
+                name="subscribe"
+                placeholder="E-mail"
+            /></label>
+
             <button class="btn-subscribe" type="submit">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-plane"></use>
               </svg>
             </button>
-            <!-- </div> -->
           </form>
         </div>
       </div>
@@ -508,11 +508,11 @@
     <!-- ================== Modal overlay ================ -->
     <div class="modal-overlay">
       <div class="modal modal-wrap">
-        <div class="modal-close-icon">
+        <button type="button" class="modal-close-icon">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </div>
+        </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
         <form class="form-area">
           <div class="modal-block-wrap">
@@ -521,10 +521,10 @@
               <input
                 class="form-input-contacts"
                 type="text"
-                name="name"
+                name="user-name"
                 id="user-name"
               />
-              <svg class="modal-input-icon" wight="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -535,11 +535,11 @@
             <div class="modal-input-wrap">
               <input
                 class="form-input-contacts"
-                type="phone"
+                type="tel"
                 name="phone"
                 id="user-phone"
               />
-              <svg class="modal-input-icon" wight="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -554,28 +554,35 @@
                 name="email"
                 id="user-email"
               />
-              <svg class="modal-input-icon" wight="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
 
-          <div class="modal-block-wrap">
+          <div class="modal-block-wrap-area">
             <label class="form-label-contacts" for="user-comment"
               >Comment</label
             >
             <textarea
-              class="form-textatea-input"
-              name="comment"
+              class="form-textarea-input"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
+
           <div class="form-checkbox-wrap">
-            <input class="visually-hidden" type="checkbox" id="user-privacy" />
+            <input
+              class="checkbox-action visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
             <label class="form-label-privacy" for="user-privacy"
               ><span class="form-checkbox">
-                <svg class="icon-check" width="16" height="16">
+                <svg class="icon-check" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg> </span
               >I accept the terms and conditions of the
